Kubernetes/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: sonarr
  name: sonarr
  namespace: media
spec:
  selector:
    matchLabels:
      io.kompose.service: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: sonarr
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Warsaw
          image: linuxserver/sonarr:4.0.15
          name: sonarr
          nodeSelector:
            kubernetes.io/hostname: nickel
          ports:
            - containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: sonarr-claim0
            - mountPath: /data
              name: sonarr-claim1
      restartPolicy: Always
      volumes:
        - name: sonarr-claim0
          persistentVolumeClaim:
            claimName: sonarr-claim0
        - name: sonarr-claim1
          hostPath:
            path: /Storage
