Kubernetes/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: sonarr
  name: sonarr
  namespace: media
spec:
  ports:
    - port: 8989
  selector:
    io.kompose.service: sonarr
