Kubernetes/media/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`sonarr.{any:.+}`)
      kind: Rule
      observability:
        accessLogs: true
      services:
        - name: sonarr
          port: 8096
